commit 2 fix bug

--- a/simulacao.html
+++ b/simulacao.html
@@ -132,6 +132,7 @@
                 </p>
                 <div class="icons">
                     <a target="_blank" href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#">Instragram</a>
                 </div>
             </div>
             <div class="footer__menu footer__itens">
