--- a/servicos.html
+++ b/servicos.html
@@ -98,6 +98,7 @@
                 </p>
                 <div class="icons">
                     <a target="_blank" href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#">Instragram</a>
                 </div>
             </div>
             <div class="footer__menu footer__itens">
