commit teste final

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </header>
 
     <main>
+        <a id="wpp-btn" href=""><img src="assets/wpp-btn.png" alt="botão Whatsapp"></a>
         <div class="carousel-container">
             <div class="carousel">
                 <div class="carousel-slide">
@@ -143,15 +144,15 @@
                 <p>Nós da Agi Capital estamos aqui para te ajudar a realizar tudo aquilo que sempre sonhou! </p>
                 <ul>
                     <li>
-                        <i class="fa-solid fa-check"></i>
+                        <i class="fa-solid fa-circle"></i>
                         <p>Temos as melhores taxas do mercado!</p>
                     </li>
                     <li>
-                        <i class="fa-solid fa-check"></i>
+                        <i class="fa-solid fa-circle"></i>
                         <p>Temos mais de 20 instituições financeiras parceiras!</p>
                     </li>
                     <li>
-                        <i class="fa-solid fa-check"></i>
+                        <i class="fa-solid fa-circle"></i>
                         <p>Conte com nossa equipe especializada que irá te auxiliar em todo o processo!</p>
                     </li>
                 </ul>
