whatsapp btn mobile

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
     <main>
         <a id="wpp-btn" href=""><img src="assets/wpp-btn.png" alt="botão Whatsapp"></a>
+        <a id="wpp-btn-mobile" href=""><img src="assets/wpp-btn-mobile.png" alt="botão Whatsapp"></a>
         <div class="carousel-container">
             <div class="carousel">
                 <div class="carousel-slide">
@@ -79,20 +80,20 @@
                     <p>Na Agi Capital você encontra o consórcio ideal para você! Entre em contato com
                         nossa equipe.</p>
                     <a href="simulacao.html">Saiba Mais</a>
-                    <img src="assets/Banner 1.png" alt="Imagem 1">
+                    <img src="assets/Banner 1.jpg" alt="Imagem 1">
                 </div>
                 <div class="carousel-slide">
                     <h2>Capital de giro Empresarial</h2>
                     <p>Nós da Agi Capital queremos te ajudar a solucionar o seu problema da melhor forma!</p>
                     <a href="simulacao.html">Saiba Mais</a>
-                    <img src="assets/Banner 2.png" alt="Imagem 2">
+                    <img src="assets/Banner 2.jpg" alt="Imagem 2">
                 </div>
                 <div class="carousel-slide">
                     <h2>Crédito com garantia <br> de bens!</h2>
                     <p>Financiamento e refinanciamento imobiliário
                         e veicular é aqui na Agi Capital!</p>
                     <a href="simulacao.html">Saiba Mais</a>
-                    <img src="assets/Banner 3.png" alt="Imagem 2">
+                    <img src="assets/Banner 3.jpg" alt="Imagem 2">
                 </div>
             </div>
 
