Commit versao final

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="informacoes telefone">
                 <i class="fa-solid fa-phone"></i>
                 <div class="info-content">
-                    <span>(19) 99950-5402</span>
+                    <span>(19) 99950-5402 ou (19) 97824-3593</span>
                 </div>
             </div>
             <div class="informacoes endereco">
@@ -43,7 +43,7 @@
 
             <div class="header__all-first">
                 <div class="menu">
-                    <img class="banner" id="logo" src="assets/logo agi capital V.png" alt="Logo Agi Capital">
+                    <img class="banner" id="logo" src="assets/logo agi capital V branco b.png" alt="Logo Agi Capital">
                     <i id="menu-icon" class="fa-solid fa-bars"></i>
                 </div>
                 <div class="header__all-second">
@@ -52,6 +52,7 @@
                         <li><a href="sobreNos.html">Quem somos</a></li>
                         <li><a href="servicos.html">Serviços</a></li>
                         <li><a href="simulacao.html">Simulação</a></li>
+                        <li><a href="https://wa.me/19999505402" target="_blank">Parceria</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </div>
@@ -64,6 +65,7 @@
                     <li><a href="sobreNos.html">Quem somos</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="simulacao.html">Simulação</a></li>
+                    <li><a href="https://wa.me/19999505402" target="_blank">Parceria</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
@@ -79,20 +81,27 @@
                     <h2>Conheça nossas linhas de Consórcios!</h2>
                     <p>Na Agi Capital você encontra o consórcio ideal para você! Entre em contato com
                         nossa equipe.</p>
-                    <a href="simulacao.html">Saiba Mais</a>
+                    <a href="https://wa.me/19999505402" target="_blank">Saiba Mais</a>
                     <img src="assets/Banner 1.jpg" alt="Imagem 1">
                 </div>
                 <div class="carousel-slide">
                     <h2>Capital de giro Empresarial</h2>
                     <p>Nós da Agi Capital queremos te ajudar a solucionar o seu problema da melhor forma!</p>
-                    <a href="simulacao.html">Saiba Mais</a>
+                    <a href="https://wa.me/19999505402" target="_blank">Saiba Mais</a>
                     <img src="assets/Banner 2.jpg" alt="Imagem 2">
                 </div>
                 <div class="carousel-slide">
                     <h2>Crédito com garantia <br> de bens!</h2>
                     <p>Financiamento e refinanciamento imobiliário
                         e veicular é aqui na Agi Capital!</p>
-                    <a href="simulacao.html">Saiba Mais</a>
+                    <a href="https://wa.me/19999505402" target="_blank">Saiba Mais</a>
+                    <img src="assets/Banner 3.jpg" alt="Imagem 2">
+                </div>
+                <div class="carousel-slide">
+                    <h2>Tire seu Certificado Digital</h2>
+                    <p>Compre seu Certificado Digital com a Agi Capital e tenha um atendimento personalizado com nossa
+                        equipe!</p>
+                    <a href="https://wa.me/19999505402" target="_blank">Saiba Mais</a>
                     <img src="assets/Banner 3.jpg" alt="Imagem 2">
                 </div>
             </div>
@@ -106,7 +115,7 @@
 
 
         <section class="first__section">
-            <h3>linhas de crédito</h3>
+            <h3>linhas de créditos</h3>
             <h2>Temos a solução ideal pra você!</h2>
             <div class="first__section-container">
                 <div class="content">
@@ -178,7 +187,7 @@
                     <i class="fa-solid fa-star"></i>
                     <div class="itens-content">
                         <h3>Melhores Taxas do Mercado</h3>
-                        <p>Contamos com diversos parceiro que nos ajudam a oferecer as melhores taxas do mercado
+                        <p>Contamos com diversos parceiros que nos ajudam a oferecer as melhores taxas do mercado
                             financeiro.</p>
                     </div>
                 </div>
@@ -200,7 +209,7 @@
                 </div>
             </div>
 
-            <img class="fourth__section-image" src="assets/vantagens.jpg" alt="#">
+            <img class="fourth__section-image" src="assets/vantagens.png" alt="#">
         </section>
 
         <section class="fifth__section">
@@ -236,6 +245,7 @@
                     <li><a href="sobreNos.html">Quem Somos</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="simulacao.html">Simulação</a></li>
+                    <li><a href="https://wa.me/19999505402" target="_blank">Parceria</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
