--- a/servicos.html
+++ b/servicos.html
@@ -22,7 +22,7 @@
             <div class="informacoes telefone">
                 <i class="fa-solid fa-phone"></i>
                 <div class="info-content">
-                    <span>(19) 99950-5402</span>
+                    <span>(19) 99950-5402 ou (19) 97824-3593</span>
                 </div>
             </div>
             <div class="informacoes endereco">
@@ -43,7 +43,7 @@
 
             <div class="header__all-first">
                 <div class="menu">
-                    <img class="banner" id="logo" src="assets/logo agi capital V.png" alt="Logo Agi Capital">
+                    <img class="banner" id="logo" src="assets/logo agi capital V branco b.png" alt="Logo Agi Capital">
                     <i id="menu-icon" class="fa-solid fa-bars"></i>
                 </div>
                 <div class="header__all-second">
@@ -52,6 +52,7 @@
                         <li><a href="sobreNos.html">Quem somos</a></li>
                         <li><a href="servicos.html">Serviços</a></li>
                         <li><a href="simulacao.html">Simulação</a></li>
+                        <li><a href="https://wa.me/19999505402" target="_blank">Parceria</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </div>
@@ -64,6 +65,7 @@
                     <li><a href="sobreNos.html">Quem somos</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="simulacao.html">Simulação</a></li>
+                    <li><a href="https://wa.me/19999505402" target="_blank">Parceria</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
@@ -71,6 +73,8 @@
     </header>
 
     <main>
+        <a id="wpp-btn" href=""><img src="assets/wpp-btn.png" alt="botão Whatsapp"></a>
+        <a id="wpp-btn-mobile" href=""><img src="assets/wpp-btn-mobile.png" alt="botão Whatsapp"></a>
         <div class="servicos">
             <!-- servico.js -->
         </div>
@@ -79,8 +83,7 @@
             <div class="fifth__section-all">
                 <div class="fifth__section-all-content">
                     <h2>Precisa de nossos serviços?</h2>
-                    <p>Entre em contato com a nossa equipe
-                        especializada e faça uma simulação!</p>
+                    <p>Venha conhecer nosso catálogo pelo Whatsapp!</p>
                 </div>
                 <div class="fifth__section-all-link"><a href="simulacao.html">Simule agora</a></div>
             </div>
@@ -108,6 +111,7 @@
                     <li><a href="sobreNos.html">Quem Somos</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="simulacao.html">Simulação</a></li>
+                    <li><a href="https://wa.me/19999505402" target="_blank">Parceria</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
